renderizacion de productos

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li>
                     <a href="./paginas/carrito.html">
                         <i class="fa-solid fa-cart-shopping" style="font-size:20px"></i>
+                        <span id="contador-carrito">0</span>
                     </a>
                 </li>
             </ul>
@@ -72,7 +73,7 @@
         </ul>
         <p>Copyright; 2025 Mi tienda</p>
     </footer>
-    <script src="https://kit.fontawesome.com/bb94350652.js" crossorigin="anonymous">
-    </script>
+    <script src="https://kit.fontawesome.com/bb94350652.js" crossorigin="anonymous"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
