--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/header-y-footer.css">
+    <link rel="stylesheet" href="../css/carrito.css">
 </head>
 <body>
     <header>
         <div class="contenedor">
             <a href="./index.html"><img src="../imagenes/logo.jpg" alt="Logo" width="50" height="50"></a>
-            <h1>Carrito</h1>
+            <h1>Carrito de compras</h1>
         </div>  
         <nav>
             <ul>
@@ -22,7 +23,26 @@
         </nav>
     </header>
     <main>
+        <section class = "izquierda">
+            <section id="contenedor-carrito">
+                <!-- Productos del carrito -->
+            </section>
+        
+            <div id="acciones-carrito">
+                <!-- Botones de eliminar y finalizar compra se agregan desde JS -->
+            </div>
 
+            <section id="resumen-carrito">
+                <!-- Acá ira el resumen del carrito -->
+            </section>
+        </section>
+
+        <section class="consejo">
+            <p>Consejo:<br>como quitar manchas</p>
+            <video controls>
+                <source src="../video/consejo.mp4" autoplay type="video/mp4">
+            </video>
+        </section>
     </main>
     <footer>
         <ul>
