--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -21,14 +21,16 @@
                 <li>
                     <a href="../paginas/carrito.html">
                         <i class="fa-solid fa-cart-shopping" style="font-size:20px"></i>
+                        <span id="contador-carrito">0</span>
                     </a>
                 </li>
             </ul>
         </nav>
     </header>    
     <main>
-        <section>
-
+        <section id="contenedor-productos">
+            <h2>Productos destacados</h2>
+            <!-- Las tarjetas de producto se van a renderizar aca -->
         </section>
     </main>
     <footer>
@@ -61,7 +63,7 @@
         </ul>
         <p><p>Copyright; 2025 Mi tienda</p></p>
     </footer>
-    <script src="https://kit.fontawesome.com/bb94350652.js" crossorigin="anonymous">
-    </script>
+    <script src="https://kit.fontawesome.com/bb94350652.js" crossorigin="anonymous"></script> 
+    <script src="../js/app.js"></script>
 </body>
 </html>
