--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -28,7 +28,7 @@
         </nav>
     </header>    
     <main>
-        <section id="contenedor-productos">
+        <section id="contenedorDeProductos">
             <h2>Productos destacados</h2>
             <!-- Las tarjetas de producto se van a renderizar aca -->
         </section>
